--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,7 +26,7 @@
     <%- include('workoutslider.ejs') %>
 
 
-    <%- include('collaps.ejs') %>
+    <%- include('kaart.ejs') %>
  <footer>
     <%- include('footerraha.ejs') %>
 </footer>
