--- a/views/kaart.ejs
+++ b/views/kaart.ejs
@@ -1,29 +1,40 @@
+
+<link rel="stylesheet" href="/stylesheets/styles.css">
 <link rel="stylesheet" href="/stylesheets/kaart.css">
+
+
 <section class="locatiesSection">
     <h3>Locaties</h3>
+
     <div class="kaartContainer">
         <div class="kaart">
 
             <div class="locaties">
                 <details>
                     <summary> Amsterdam </summary>
-                    <p>Nieuwe Zijdskolk</p>
-                    <p>Jordaan</p>
-                    <p>De Pijp</p>
+                    <ul>
+                        <li>- Nieuwe Zijdskolk</li>
+                        <li>- Jordaan</li>
+                        <li>- De Pijp</li>
+                    </ul>
                 </details>
 
                 <details>
                     <summary> Utrecht </summary>
-                    <p>Nieuwe Zijdskolk</p>
-                    <p>Jordaan</p>
-                    <p>De Pijp</p>
+                    <ul>
+                        <li>- Nieuwe Zijdskolk</li>
+                        <li>- Jordaan</li>
+                        <li>- De Pijp</li>
+                    </ul>
                 </details>
 
                 <details>
                     <summary> Rotterdam </summary>
-                    <p>Nieuwe Zijdskolk</p>
-                    <p>Jordaan</p>
-                    <p>De Pijp</p>
+                    <ul>
+                        <li>- Nieuwe Zijdskolk</li>
+                        <li>- Jordaan</li>
+                        <li>- De Pijp</li>
+                    </ul>
                 </details>
             </div>
             <p><iframe
