--- a/views/newhomepage.ejs
+++ b/views/newhomepage.ejs
@@ -25,7 +25,7 @@
     <%- include('workoutslider.ejs') %>
 
 
-    <%- include('collaps.ejs') %>
+    <%- include('kaart.ejs') %>
 
  <footer>
     <%- include('footer.ejs') %>
