--- a/public/stylesheets/kaart.css
+++ b/public/stylesheets/kaart.css
@@ -4,15 +4,16 @@
     margin: 3em 6vw 3em 6vw;
 }
 
-h3 {
+.locatiesSection h3 {
     font-size: 3em;
     text-transform: uppercase;
+    color: var(--accent-kleur);
+    border-bottom: 2px solid var(--accent-kleur);
 }
 
 .kaartContainer {
     margin-top: 1em;
 }
-
 
 .kaart{
     display: flex;
@@ -24,4 +25,30 @@ h3 {
    margin-right: 1em;
     width: 100%;
     border-radius: 0.3em;
+}
+
+
+
+ul {
+    margin-top: 0.3em;
+}
+
+li {
+    margin-left: 2em;
+}
+
+
+summary {
+    color: var(--accent-kleur);
+    font-family: monument extended;
+    margin-top: 1em;
+    margin-left: 1em;
+}
+
+
+
+summary:hover {
+    color: var(--tekst);
+    cursor: pointer;
+    transition: 0.5s;
 }
