--- a/public/stylesheets/workoutslider.css
+++ b/public/stylesheets/workoutslider.css
@@ -1,11 +1,11 @@
 .textsliders {
-	padding: 2em;
+	padding:  2em 3em 0 3em;
+	margin: 0 0 2em 0;
 	border-top: 3px solid var(--accent-kleur) ;
 }
 
 .textsliders h3 {
 	color: var(--accent-kleur);
-	position: relative;
 	margin: 0 0 0 0;
 	font-size: 5vw;
 	left: 2%;
@@ -14,22 +14,17 @@
 
 .textsliders p {
 	width: 100%;
-	font-size: 0.3em;
 
-	position: relative;
-	font-size: 18px;
-	text-align: left;
-	left: 2%;
+	font-size: 1.4vw;
 	margin-top: 0.5em;
 }
 
 .accordion {
-
 	width: 100%;
 	height: 80%;
 
 	overflow: hidden;
-	left: 2%;
+
 	position: relative;
 	background-color: rgba(0, 0, 0, 0.75);
 }
