--- a/views/workoutslider.ejs
+++ b/views/workoutslider.ejs
@@ -5,13 +5,13 @@
 <div class="textsliders">
   <h3>Trending Workouts</h3>
 
-  <p>
-    FitBuddy biedt trending workouts voor zelfstandig trainen. Probeer HIIT voor snelle resultaten, yoga en pilates voor
-    balans en flexibiliteit, en bodyweight-oefeningen voor overal trainen.  
+  <!-- <p>
+    Ontdek de trending workouts op FitBuddy en geef je fitnessroutine een boost. Van intensieve HIIT-sessies die je vetverbranding maximaliseren, tot ontspannende yoga en pilates voor een betere flexibiliteit en balans. 
   </p>
 
-    <p>Met FitBuddy train je effectief en
-      gevarieerd, waar en wanneer je wilt!</p>
+    <p>Voor kracht en spieropbouw biedt FitBuddy diverse krachttraining-routines, geschikt voor elk niveau. Daarnaast zijn er dynamische bodyweight-oefeningen die je overal kunt doen.</p>
+
+    <p>Met FitBuddy blijf je gemotiveerd en haal je het beste uit jezelf, altijd en overal!</p> -->
 </div>
 
 <div class="accordion">
