Whatsapp button werkt
nu met behulp van  een whatsapp link en geintegreerde values van de trainer

--- a/views/detailpagina.ejs
+++ b/views/detailpagina.ejs
@@ -125,7 +125,9 @@
                                                     <%= trainer.email %>
                                                 </a></li>
                                         </ul>                
-                                        <a class="whatsapp" href="#"> <i class="fab fa-whatsapp"></i></a>                  
+                                        <a class="whatsapp" href="https://wa.me/<%= trainer.telefoon %>?text=Ik%20ben%20ge%C3%AFnteresseerd%20in%20een%20personal%20trainer.%20Kun%20je%20me%20meer%20info%20geven%20over%20mogelijkheden%20en%20kosten?%20Ik%20hoor%20graag%20van%20je%20<%= encodeURIComponent(trainer.naam) %>">
+                                            <i class="fab fa-whatsapp"></i>
+                                          </a>              
                                     </div>
 
                                 </div>
