--- a/views/workoutslider.ejs
+++ b/views/workoutslider.ejs
@@ -3,7 +3,7 @@
 
 
 <div class="textsliders">
-  <h3>Trending Workouts</h3>
+  <h3>Trending <span>workouts</span></h3>
 
   <!-- <p>
     Ontdek de trending workouts op FitBuddy en geef je fitnessroutine een boost. Van intensieve HIIT-sessies die je vetverbranding maximaliseren, tot ontspannende yoga en pilates voor een betere flexibiliteit en balans. 
