--- a/public/stylesheets/workoutslider.css
+++ b/public/stylesheets/workoutslider.css
@@ -19,6 +19,12 @@
 	margin-top: 0.5em;
 }
 
+.textsliders h3, span {
+    text-transform: uppercase;
+    display: flex;
+    display: inline-block;
+}
+
 .accordion {
 	width: 100%;
 	height: 80%;
