--- a/views/banner.ejs
+++ b/views/banner.ejs
@@ -2,139 +2,140 @@
 
 <div class="carousel">
   <div class="list">
-    <div
-      class="item"
-      style="background-image: url(/stylesheets/images/banner7.jpg)"
-    >
+    <div class="item" style="background-image: url(/stylesheets/images/banner7.jpg)">
+
       <div class="content">
-        <h3 class="title">TRAIN</h3>
-        <h3 class="name">ARMS</h3>
+        <h2 class="title">Train</h2>
+        <h2 class="name">Arms</h2>
+
         <p class="des">Train je armen op een leuke manier!</p>
+
         <div class="btn">
           <button>Meer Informatie</button>
           <button>Train Arms</button>
         </div>
+
       </div>
     </div>
 
-    <div
-      class="item"
-      style="background-image: url(/stylesheets/images/banner6.jpg)"
-    >
+    <div class="item" style="background-image: url(/stylesheets/images/banner6.jpg)">
+
       <div class="content">
-        <h3 class="title">CRUNCHES</h3>
-        <h3 class="name">ABS</h3>
-        <p class="des">Train je abs met deze workout</p>
+        <h2 class="title">Zoek</h2>
+        <h2 class="name">Buddy</h2>
+
+        <p class="des">Zoek een buddy en train samen!</p>
+
         <div class="btn">
           <button>Meer Informatie</button>
-          <button>Train Abs</button>
+          <a href="/overzicht"><button>Zoek buddy</button></a>
         </div>
+
       </div>
     </div>
 
-    <div
-      class="item"
-      style="background-image: url(/stylesheets/images/banner4.jpg)"
-    >
+    <div class="item" style="background-image: url(/stylesheets/images/banner4.jpg)">
+
       <div class="content">
-        <h3 class="title">Weight</h3>
-        <h3 class="name">Lifting</h3>
+        <h2 class="title">Weight</h2>
+        <h2 class="name">Lifting</h2>
+        
         <p class="des">Lift zware gewichten met jouw buddy en wordt sterker!</p>
+
         <div class="btn">
           <button>See More</button>
           <button>Zoek Buddy</button>
         </div>
+
       </div>
     </div>
 
-    <div
-      class="item"
-      style="
-        background-image: url(/stylesheets/images/banner6.jpg);
-      "
-    >
+    <div class="item" style="
+        background-image: url(/stylesheets/images/banner6.jpg);">
       <div class="content">
-        <h3 class="title">Train</h3>
-        <h3 class="name">Samen</h3>
+
+        <h2 class="title">Train</h2>
+        <h2 class="name">Samen</h2>
+
         <p class="des">Vind een buddy en train buiten met elkaar!</p>
+
         <div class="btn">
           <button>Meer informatie</button>
           <button>Zoek Buddy</button>
         </div>
+
       </div>
     </div>
 
-    <div
-      class="item"
-      style="background-image: url(/stylesheets/images/banner8.jpg)"
-    >
+    <div class="item" style="background-image: url(/stylesheets/images/banner8.jpg)">
       <div class="content">
-        <h3 class="title">Abs</h3>
-        <h3 class="name">training</h3>
+        
+        <h2 class="title">Abs</h2>
+        <h2 class="name">training</2>
+
         <p class="des">
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque ipsum
-          sunt unde ab vel.
+          feel the burn en doe crunches!
         </p>
+
         <div class="btn">
           <button>Meer Informatie</button>
           <button>Maak Een Plan</button>
         </div>
+
       </div>
     </div>
 
-    <div
-      class="item"
-      style="
-        background-image: url(/stylesheets/images/banner9.jpg);
-      "
-    >
+    <div class="item" style="
+        background-image: url(/stylesheets/images/banner9.jpg);">
       <div class="content">
-        <h3 class="title">HEAVY</h3>
-        <h3 class="name">WEIGHTS</h3>
+
+        <h2 class="title">Heavy</h2>
+        <h2 class="name">Weights</h2>
+
         <p class="des">
-          Til loei zware gewichten in één van onze gyms en wordt een stuk
-          fitter.
+          Wordt een stuk sterker en til heavy weights
         </p>
+
         <div class="btn">
           <button>Meer Informatie</button>
           <button>Maak Een Plan</button>
         </div>
+
       </div>
     </div>
 
-    <div
-      class="item"
-      style="
-        background-image: url(/stylesheets/images/banner9.jpg);
-      "
-    >
+    <div class="item" style="
+        background-image: url(/stylesheets/images/banner9.jpg); ">
+
       <div class="content">
-        <h3 class="title">Train</h3>
-        <h3 class="name">Samen</h3>
+        <h2 class="title">Train</h2>
+        <h2 class="name">Samen</h2>
+
         <p class="des">
-          Gebruik één van onze trainingsruimtes om samen met een groep te gaan
-          trainen!
+          Wordt fit together!
         </p>
+
         <div class="btn">
           <button>Meer informatie</button>
           <button>Zoek Buddy</button>
         </div>
+
       </div>
     </div>
   </div>
 
   <!-- Next prev button -->
   <div class="arrows">
-    <button class="prev"><</button>
-    <button class="next">></button>
+        <button class="prev"> < </button>
+        <button class="next"> > </button>
   </div>
 
-  <!-- Time running -->
+  
+         <!-- Tijdsbalk bovenin -->
   <div class="timeRunning"></div>
 </div>
 
-<marquee loop="-1"
-  >Welkom bij FitBuddy – Jouw persoonlijke gids naar een gezonder leven! 🎉
+<marquee loop="-1">Welkom bij FitBuddy – Jouw persoonlijke gids naar een gezonder leven! 🎉
   Sluit je vandaag nog aan en ontdek hoe je jouw fitnessdoelen kunt bereiken met
   op maat gemaakte trainingen en voedingsadvies! 💪 #FitBuddy #GezondLeven
   #FitnessDoelen
