--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -1,24 +1,31 @@
 <link rel="stylesheet" href="/stylesheets/navbar.css" />
 
-    <header>
-        <!--HamBurger Icon-->
-        <div class="bars" id="nav-action">
-            <span class="bar"> </span>
-        </div>
+<header>
+    <!--HamBurger Icon-->
+    <div class="bars" id="nav-action">
+        <span class="bar"> </span>
+    </div>
 
-        <!--Navbar Links-->
-        <nav id="nav">
-            <ul class="navlist">
-                <li class="shape-circle circle-one"><a href="#">Plan Maken</a></li>
-                <li class="shape-circle circle-two">
-                    <a href="#">Trending Workouts</a>
-                </li>
-                <li class="shape-circle circle-three"><a href="#">Over Ons</a></li>
-                <li class="shape-circle circle-five">
-                    <a href="#">Home</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
+    <!--Navbar Links-->
+    <nav id="nav">
+        <ul class="navlist">
+            <li class="shape-circle circle-one">
+                <a href="/overzicht">Plan Maken</a>
+            </li>
 
-    <script src="/stylesheets/scripts/index.js"></script>
+            <li class="shape-circle circle-two">
+                <a href="#">Trending Workouts</a>
+            </li>
+
+            <li class="shape-circle circle-three">
+                <a href="/overons">Over Ons</a>
+            </li>
+
+            <li class="shape-circle circle-five">
+                <a href="/">Home</a>
+            </li>
+        </ul>
+    </nav>
+</header>
+
+<script src="/stylesheets/scripts/index.js"></script>
