--- a/views/workoutslider.ejs
+++ b/views/workoutslider.ejs
@@ -26,11 +26,9 @@
           <div class="wrapper">
             <div class="row">
               <div class="col-sm-4">
-                <h2>Full Arm workout</h2>
+                <h3>Benchpress</h3>
                 <p>
-                  An beginner workout to boost the energy bla bla bla An
-                  begiiner workout to boost the energy bla bla bl An begiiner
-                  workout to boost the energy bla bla bla
+                  De Bench Press is ideaal voor het opbouwen van sterke borst-, schouder- en armspieren. Druk de halter omhoog terwijl je op een bank ligt. Perfect voor kracht en spiermassa.
                 </p>
               </div>
               <div class="col-sm-8 text-center">
@@ -53,11 +51,9 @@
           <div class="wrapper">
             <div class="row">
               <div class="col-sm-4">
-                <h2>Your Staff and Trainers</h2>
+                <h3>Crunches</h3>
                 <p>
-                  An beginner workout to boost the energy bla bla bla An
-                  begiiner workout to boost the energy bla bla bl An begiiner
-                  workout to boost the energy bla bla bla
+                  Crunches versterken je buikspieren. Lig op je rug, til je schouders van de grond en span je buikspieren aan. Perfect voor een strakke core.
                 </p>
               </div>
               <div class="col-sm-8 text-center">
@@ -72,18 +68,16 @@
     <li>
       <div class="close">×</div>
       <div class="background-image"></div>
-      <div class="label">Legs</div>
-      <div class="teaser">Legs</div>
+      <div class="label">Back</div>
+      <div class="teaser">Back</div>
       <div class="full-content">
         <a href="#">
           <div class="wrapper">
             <div class="row">
               <div class="col-sm-4">
-                <h4>ABS</h4>
+                <h3>Pull up</h3>
                 <p>
-                  An beginner workout to boost the energy bla bla bla An
-                  begiiner workout to boost the energy bla bla bl An begiiner
-                  workout to boost the energy bla bla bla
+                  Versterk je rugspieren met oefeningen zoals de deadlift, bent-over row, en pull-ups. Deze bewegingen verbeteren je houding en algehele kracht. Perfect voor een sterke, gezonde rug.
                 </p>
               </div>
               <div class="col-sm-8 text-center">
@@ -106,7 +100,7 @@
           <div class="wrapper">
             <div class="row">
               <div class="col-sm-4">
-                <h2>Shoulder</h2>
+                <h3>Dumbbell press</h3>
                 <p>
                   An beginner workout to boost the energy bla bla bla An
                   begiiner workout to boost the energy bla bla bl An begiiner
@@ -132,11 +126,9 @@
           <div class="wrapper">
             <div class="row">
               <div class="col-sm-4"></div>
-              <h2>Shoulder</h2>
+              <h2>Bulgarian splitsquat</h2>
               <p>
-                An beginner workout to boost the energy bla bla bla An begiiner
-                workout to boost the energy bla bla bl An begiiner workout to
-                boost the energy bla bla bla
+                De Bulgarian Split Squat is een top oefening voor sterke benen en bilspieren. Plaats één voet achter je op een verhoging en zak door je knie. Deze oefening verbetert kracht, balans en stabiliteit. Voeg hem toe aan je routine voor snelle resultaten!
               </p>
 
               <div class="col-sm-8 text-center">
