--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -60,13 +60,14 @@ body {
 
 body {
     background-color: rgb(20, 20, 20);
-   /* background-image: linear-gradient(150deg, #545A9C, black); */
 }
 
 p {
     font-family: Raleway, sans-serif;
     color: var(--tekst);
 }
+
+/* Headings */
 
 h1 {
     font-family: open sans bold, Helvetica, sans-serif;
@@ -85,13 +86,7 @@ h4 {
     font-family: monument extended, sans-serif;
 }
 
-h5 {
-    font-family:open sans bold, sans-serif;
-}
 
-h6 {
-    font-family: Arial, Helvetica, sans-serif;
-}
 
 li {
     list-style-type: none;
