--- a/views/ourstory.ejs
+++ b/views/ourstory.ejs
@@ -4,7 +4,7 @@
 <div class="aboutus">
     <div class="outer">
           <div class="mainStory">
-            <h1>Over<br/> <span>Ons</span></h1>
+            <h3>Over<br/> <span>Ons</span></h3>
             <p>
               FitBuddy is jouw ultieme trainingspartner voor het bereiken van fitnessdoelen. Met een breed scala aan trending workouts zoals HIIT, yoga, pilates en krachttraining biedt FitBuddy voor ieder wat wils. Of je nu thuis, in de sportschool of buiten wilt trainen, FitBuddy past zich aan jouw behoeften aan.
                </p>
@@ -12,7 +12,8 @@
                <p>De gebruiksvriendelijke app begeleidt je stap voor stap, met video-instructies en gepersonaliseerde schema's. Begin vandaag nog en ervaar hoe FitBuddy je helpt fit, sterk en gezond te worden, waar en wanneer je maar wilt!</p>
             
             <div class="button">
-              <a class="cart-btn" href="#">ADD TO CART</a>
+              
+              <a class="cart-btn" href="/overzicht">Zoek Buddies</a>
             </div>
           </div>
         
