--- a/views/kaart.ejs
+++ b/views/kaart.ejs
@@ -22,18 +22,18 @@
                 <details>
                     <summary> Utrecht </summary>
                     <ul>
-                        <li>- Nieuwe Zijdskolk</li>
-                        <li>- Jordaan</li>
-                        <li>- De Pijp</li>
+                        <li>- Woerden</li>
+                        <li>- Utrecht Centraal</li>
+                        <li>- Overvecht</li>
                     </ul>
                 </details>
 
                 <details>
                     <summary> Rotterdam </summary>
                     <ul>
-                        <li>- Nieuwe Zijdskolk</li>
-                        <li>- Jordaan</li>
-                        <li>- De Pijp</li>
+                        <li>- Kruiskade</li>
+                        <li>- Blijdorp</li>
+                        <li>- Lommerrijk</li>
                     </ul>
                 </details>
             </div>
