--- a/public/stylesheets/profiel.css
+++ b/public/stylesheets/profiel.css
@@ -85,3 +85,15 @@ button:hover {
     background-color: rgb(230, 149, 0);
     transition: 0.5s ease-in-out;
 }
+
+.circle {
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    top: 50%;
+    left: 50%;
+    margin: -50px 0 0 -50px;
+    background: #CB4B16;
+    border-radius: 80%;
+    backface-visibility: hidden;
+  }
