--- a/views/banner.ejs
+++ b/views/banner.ejs
@@ -27,8 +27,8 @@
         <p class="des">Zoek een buddy en train samen!</p>
 
         <div class="btn">
-          <button>Meer Informatie</button>
-          <a href="/overzicht"><button>Zoek buddy</button></a>
+          <button><a href="/error"> Meer Informatie</a></button>
+          <button><a href="/overzicht">Zoek buddy</a></button>
         </div>
 
       </div>
@@ -43,7 +43,7 @@
         <p class="des">Lift zware gewichten met jouw buddy en wordt sterker!</p>
 
         <div class="btn">
-          <button>See More</button>
+          <button><a href="/error"> Meer Informatie</a></button>
           <button>Zoek Buddy</button>
         </div>
 
@@ -60,7 +60,7 @@
         <p class="des">Vind een buddy en train buiten met elkaar!</p>
 
         <div class="btn">
-          <button>Meer informatie</button>
+          <button><a href="/error"> Meer Informatie</a></button>
           <button>Zoek Buddy</button>
         </div>
 
@@ -71,14 +71,14 @@
       <div class="content">
         
         <h2 class="title">Abs</h2>
-        <h2 class="name">training</2>
+        <h2 class="name">training</h2>
 
         <p class="des">
           feel the burn en doe crunches!
         </p>
 
         <div class="btn">
-          <button>Meer Informatie</button>
+          <button><a href="/error"> Meer Informatie</a></button>
           <button>Maak Een Plan</button>
         </div>
 
@@ -97,7 +97,7 @@
         </p>
 
         <div class="btn">
-          <button>Meer Informatie</button>
+          <button><a href="/error"> Meer Informatie</a></button>
           <button>Maak Een Plan</button>
         </div>
 
@@ -116,7 +116,7 @@
         </p>
 
         <div class="btn">
-          <button>Meer informatie</button>
+          <button><a href="/error"> Meer Informatie</a></button>
           <button>Zoek Buddy</button>
         </div>
 
