--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -14,11 +14,11 @@
             </li>
 
             <li class="shape-circle circle-two">
-                <a href="#">Trending Workouts</a>
+                <a href="/error">Trending Workouts</a>
             </li>
 
             <li class="shape-circle circle-three">
-                <a href="/overons">Over Ons</a>
+                <a href="/error">Over Ons</a>
             </li>
 
             <li class="shape-circle circle-five">
@@ -27,5 +27,6 @@
         </ul>
     </nav>
 </header>
+
 
 <script src="/stylesheets/scripts/index.js"></script>
